ingress/02_webapptwo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeptwo
  labels:
    app: webdeptwo
spec:
  template:
    metadata:
      name: webdeptwo-pod
      labels:
        app: webdeptwo
    spec:
      containers:
      - name: webcontwo
        image: nginxdemos/hello:plain-text

  replicas: 3
  selector:
    matchLabels:
      app: webdeptwo
---
apiVersion: v1
kind: Service
metadata:
  name: webdeptwosvc

spec:
  type: ClusterIP
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: webdeptwo
