ingress/03_ingress_resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource

spec: 
  rules:
  - host: ec2-3-238-0-181.compute-1.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: webdeponesvc
          servicePort: 80
      - backend:
          serviceName: webdeptwosvc
          servicePort: 80
        path: /coffee
